<resources>
    <!-- common -->
    <string name="default_notification_channel_id" translatable="false">Bulls</string>
    <string name="default_notification_channel_name" translatable="false">Bulls and Cows</string>

    <!--  activity_main  -->
    <string name="app_name">Bulls &amp; Cows</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Publish dialog   -->
    <string name="text_dialog_publish">Publish</string>
    <string name="text_dialog_time">Time</string>
    <string name="text_dialog_moves">Moves</string>
    <string name="cancel">Cancel</string>
    <string name="title_dialog">You win!\nWant to publish your result?</string>
    <string name="your_nick_name">Your nickname</string>
    <string name="start_time">00:00</string>
    <string name="rules"><b>How to play?</b>\n\n
        You need to guess a four-digit number with non-repeating digits.\n\n
        After entering the estimated number you will be given the answer where number of:\n\n
        cows - numbers are guessed without matching their positions, \n\n
        bulls - numbers are guessed right up to the position. \n\n</string>
    <string name="bottom_rules_start">To start click \"Start\"</string>
    <string name="bottom_rules_close">\"Close\"</string>
    <string name="start_part">Start</string>
    <string name="close_part">Close</string>
    <string name="how_to_play_part">How to play?</string>

    <!-- fragment_result   -->
    <string name="result_tab_today">Today</string>
    <string name="result_tab_week">Week</string>
    <string name="result_tab_month">Month</string>
    <string name="result_tab_year">Year</string>
    <string name="results_title">Results</string>
    <string name="rules_title">Rules</string>
    <string name="error_incorrect_number">Your number incorrect</string>
    <string name="do_not_have_data">Don\'t have any data</string>

    <!-- notification -->
    <string name="notification_title">You result shift to position - %s!</string>
    <string name="notification_body">%s find number during %s and by %s moves</string>
</resources>
