<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_one"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/one" />

            <TextView
                android:id="@+id/btn_two"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/two" />

            <TextView
                android:id="@+id/btn_three"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_four"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/four" />

            <TextView
                android:id="@+id/btn_five"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/five" />

            <TextView
                android:id="@+id/btn_six"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_seven"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/btn_eight"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/btn_nine"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_start"
                style="@style/AppTheme.KeyboardButton"
                android:layout_height="40dp"
                android:background="@drawable/bg_colored_button"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:text="@string/start"
                android:textColor="@color/txtColor" />

            <TextView
                android:id="@+id/btn_zero"
                style="@style/AppTheme.KeyboardButton"
                android:text="@string/zero" />

            <RelativeLayout
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_enter_button"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:orientation="horizontal"
                android:text="@string/one">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/transparent"
                    android:scaleType="center"
                    android:src="@drawable/ic_enter"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/btn_clear"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_enter_button"
                    android:clickable="false"
                    android:drawablePadding="5dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/ic_clear"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</merge>