<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_enter_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_first"
            style="@style/DisplayText"
            tools:text="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_second"
            style="@style/DisplayText"
            tools:text="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_third"
            style="@style/DisplayText"
            tools:text="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_forth"
            style="@style/DisplayText"
            tools:text="1" />
    </LinearLayout>
</merge>